# Atria

./: .env.example  .gitignore  .replit  README.md  index.html  next.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  tsconfig.json  vite.config.js
.claude/: launch.json
docs/: CLOUDFLARE_DEPLOYMENT_READINESS.md  CLOUDFLARE_HOSTING_MAP.md  VERCEL_DEPLOYMENT.md
drizzle/: 0001_rare_wild_child.sql
drizzle/meta/: 0001_snapshot.json  _journal.json
mobile/: App.tsx  QUICKSTART.md  app.json  eas.json  package-lock.json  package.json
mobile/src/: navigation.tsx
mobile/src/components/: CoverageTracker.tsx  FindingsPanel.tsx
mobile/src/lib/: api.ts  supabase-polyfill.native.ts  supabase-polyfill.ts  supabase.ts  tokens.ts
mobile/src/screens/: InspectionCamera.tsx  InspectionHistory.tsx  InspectionStart.tsx  InspectionSummary.tsx  Login.tsx  Profile.tsx  Properties.tsx  PropertyDetail.tsx  PropertyTraining.tsx  ReportIssue.tsx
scripts/: backfill-property-baselines.ts  check-node-version.mjs  open-phone-dev-terminal.sh  prepare-phone-testing.sh  repair-property-video-keyframes.ts  run-localization-benchmark.ts
server/: db.ts  schema.ts
src/: middleware.ts
src/app/: layout.tsx
src/app/login/: login-form.tsx  page.tsx
src/components/dashboard/: add-property-dialog.tsx  dashboard-content.tsx
src/components/inspection/: inspection-flow.tsx
src/components/layout/: app-layout.tsx  (+3 more)
src/lib/: auth.ts
src/styles/: globals.css
vision-service/: main.py
vision-service/routers/: analyze.py
vision-service/services/: claude_vision.py
(+50 files in other folders)
